Use mean and standard error rather than boxplots

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -13,7 +13,7 @@ bibliography: references.bib
 ---
 
 ```{r}
-resource_version <- "20231122-105059-c6eec861"
+resource_version <- "20231122-165955-7dd5c01d"
 ```
 
 # Models for spatial structure {#beyond-borders}
@@ -543,10 +543,24 @@ Uniformity was assessed using probability integral transform (PIT) histograms [@
 
 ### Results
 
-(ref:crps-boxplot) Boxplots showing the minimum value, 25th quantile, median, 75th quantile and maximum value of the CRPS for each inferential model and simulation model. The mean value is shown as a point.
+(ref:crps-mean-se-grid) The mean CRPS and its standard error for each inferential model and simulation model.
 
-```{r crps-boxplot, fig.cap="(ref:crps-boxplot)"}
-path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-boxplot.png")
+```{r crps-mean-se-grid, fig.cap="(ref:crps-mean-se-grid)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-grid.png")
+knitr::include_graphics(path)
+```
+
+(ref:crps-mean-se-civ) The mean CRPS and its standard error for each inferential model and simulation model.
+
+```{r crps-mean-se-civ, fig.cap="(ref:crps-mean-se-civ)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-civ.png")
+knitr::include_graphics(path)
+```
+
+(ref:crps-mean-se-tex) The mean CRPS and its standard error for each inferential model and simulation model.
+
+```{r crps-mean-se-tex, fig.cap="(ref:crps-mean-se-tex)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-tex.png")
 knitr::include_graphics(path)
 ```
 
