--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -5,7 +5,7 @@
 <!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
 
 ```{r}
-resource_version <- "20231122-105059-c6eec861"
+resource_version <- "20231122-165955-7dd5c01d"
 ```
 
 # Models for spatial structure
@@ -55,6 +55,34 @@ if(knitr::is_latex_output()) gt::as_latex(gt_mse)
 gt_crps <- readRDS(paste0("resources/beyond-borders/", resource_version, "/depends/gt_crps.rds"))
 if(knitr::is_html_output()) gt_crps
 if(knitr::is_latex_output()) gt::as_latex(gt_crps)
+```
+
+(ref:crps-mean-se-1) The mean CRPS and its standard error for each inferential model and simulation model.
+
+```{r crps-mean-se-1, fig.cap="(ref:crps-mean-se-1)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-1.png")
+knitr::include_graphics(path)
+```
+
+(ref:crps-mean-se-2) The mean CRPS and its standard error for each inferential model and simulation model.
+
+```{r crps-mean-se-2, fig.cap="(ref:crps-mean-se-2)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-2.png")
+knitr::include_graphics(path)
+```
+
+(ref:crps-mean-se-3) The mean CRPS and its standard error for each inferential model and simulation model.
+
+```{r crps-mean-se-3, fig.cap="(ref:crps-mean-se-3)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-3.png")
+knitr::include_graphics(path)
+```
+
+(ref:crps-mean-se-4) The mean CRPS and its standard error for each inferential model and simulation model.
+
+```{r crps-mean-se-4, fig.cap="(ref:crps-mean-se-4)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-4.png")
+knitr::include_graphics(path)
 ```
 
 (ref:map-crps-1) Cloropleth showing the mean value of the CRPS at each area of the first vignette geometry (Panel \@ref(fig:geometries)A).
